<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    tools:context="com.sasha.reviews.activities.Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/round_bg">

        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:hint="Oleg"
            android:inputType="textPersonName"
            android:id="@+id/register_name"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/register_name"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:id="@+id/register_email"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:layout_below="@+id/register_email"
            android:id="@+id/register_password"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/register_password"
            android:hint="Year of study, 1998"
            android:id="@+id/register_year_begin"
            android:inputType="number"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:id="@+id/register_year_end"
            android:hint="Year of graduation, 2002"
            android:layout_below="@+id/register_year_begin"
            android:inputType="number"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:id="@+id/start_rel"
            android:layout_below="@+id/register_year_end">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/register_login"
                    android:layout_weight="1"
                    android:background="#3B5999"
                    android:textColor="#fff"
                    android:layout_marginRight="5dp"
                    android:textAllCaps="false"
                    android:text="Sing in"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#488BF4"
                    android:textColor="#fff"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/register_register"
                    android:textAllCaps="false"
                    android:text="Register" />

            </LinearLayout>

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
