<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back2"
    android:layout_height="match_parent"
    tools:context="com.sasha.reviews.activities.Start">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/round_bg">

        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:text="sasha@a.com"
            android:inputType="textEmailAddress"
            android:id="@+id/start_email"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:text="12345678"
            android:layout_below="@+id/start_email"
            android:id="@+id/start_password"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:id="@+id/start_rel"
            android:layout_below="@+id/start_password">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:id="@+id/start_register"
                    android:layout_weight="1"
                    android:background="#3B5999"
                    android:textColor="#fff"
                    android:layout_marginRight="5dp"
                    android:textAllCaps="false"
                    android:text="Register"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="#488BF4"
                    android:textColor="#fff"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/start_login"
                    android:textAllCaps="false"
                    android:text="Sign in" />

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:gravity="center"
            android:layout_below="@+id/start_rel"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="Forgot password?"/>


    </RelativeLayout>


</RelativeLayout>
